@@ -1,3 +1,11 @@
+2002-11-02  John Harper  <jsh@unfactored.org>
+
+	* widgets/keymap.jl (make-keymap:binding-item): fix packing of
+	"Grab" button
+
+	* widgets/command.jl (make-command-item): set minimum size of
+	text and clist widgets
+
 2002-05-29  John Harper  <jsh@unfactored.org>
 
 	* more merging:
